--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@
 !.gitignore
 !.gitconfig
 !/.config/
-# !/.config/**
-# !/.config/*/
+
 !./config/helix/
-!./config/fish/
 !/.config/helix/**
+!/.config/helix/languages.toml
+
+!./config/fish/
 !/.config/fish/**
