--- a/.gitconfig
+++ b/.gitconfig
@@ -23,7 +23,8 @@
 
 [credential]
 	helper = 
-	helper = /usr/local/share/gcm-core/git-credential-manager
+	# helper = /usr/local/share/gcm-core/git-credential-manager
+	helper = /mnt/c/Program\\ Files/Git/mingw64/libexec/git-core/git-credential-wincred.exe
 [credential "https://dev.azure.com"]
 	useHttpPath = true
 
