--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,5 @@
+[include]
+	path = .gitconfig.os
 # This is Git's per-user configuration file.
 [user]
 	name = tsugumi-sys
@@ -21,10 +23,6 @@
 [merge]
     conflictstyle = diff3
 
-[credential]
-	helper = 
-	# helper = /usr/local/share/gcm-core/git-credential-manager
-	helper = /mnt/c/Program\\ Files/Git/mingw64/libexec/git-core/git-credential-wincred.exe
 [credential "https://dev.azure.com"]
 	useHttpPath = true
 
