add auto closing

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -4,3 +4,11 @@ theme = "colibri"
 [editor]
 true-color = true
 cursorline = true
+
+[editor.auto-pairs]
+'(' = ')'
+'{' = '}'
+'[' = ']'
+'"' = '"'
+'`' = '`'
+'<' = '>'
